internal/dataplane/testdata/golden/fallback-config-ingress-class/in.yaml
# In this test case we have an Ingress using a broken IngressClass.
# We expect empty config because the IngressClass affects the Ingress directly.
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: kong
  uid: "365fde8d-1cb4-45c5-bba1-b46eebdca3eb"
  annotations:
    test.konghq.com/broken: "true"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
spec:
  ingressClassName: kong
  rules:
    - host: example.com
      http:
        paths:
          - backend:
              service:
                name: service
                port:
                  number: 80
            path: /ingress
            pathType: Exact
---
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: default
  annotations:
    konghq.com/plugins: plugin
spec:
  ports:
    - port: 80
